[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/UI/NormalFont.tres" type="FontFile" id=1]
[ext_resource path="res://Assets/UI/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/TitleFont.tres" type="FontFile" id=3]
[ext_resource path="res://Assets/Scripts/Menus/MainMenu.gd" type="Script" id=4]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1024.0
offset_bottom = 768.0
color = Color( 0, 0, 0, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 1024.0
offset_bottom = 768.0
theme_override_constants/margin_right = 100
theme_override_constants/margin_left = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
offset_left = 100.0
offset_right = 924.0
offset_bottom = 768.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
offset_right = 824.0
offset_bottom = 300.0
custom_minimum_size = Vector2( 824, 300 )
size_flags_vertical = 1
theme = ExtResource( 2 )
theme_override_fonts/font = ExtResource( 3 )
text = "Breakout: Afterlife"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
offset_top = 304.0
offset_right = 824.0
offset_bottom = 768.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Start" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
offset_right = 824.0
offset_bottom = 55.0
custom_minimum_size = Vector2( 824, 55 )
theme_override_constants/margin_right = 200
theme_override_constants/margin_left = 200

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/Start"]
offset_left = 200.0
offset_right = 624.0
offset_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
theme_override_fonts/font = ExtResource( 1 )
text = "Start"

[node name="Credits" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
offset_top = 75.0
offset_right = 824.0
offset_bottom = 130.0
custom_minimum_size = Vector2( 824, 55 )
theme_override_constants/margin_right = 200
theme_override_constants/margin_left = 200

[node name="CreditsButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/Credits"]
offset_left = 200.0
offset_right = 624.0
offset_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
theme_override_fonts/font = ExtResource( 1 )
text = "Credits"

[node name="Quit" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
offset_top = 150.0
offset_right = 824.0
offset_bottom = 255.0
custom_minimum_size = Vector2( 824, 55 )
theme_override_constants/margin_right = 200
theme_override_constants/margin_left = 200
theme_override_constants/margin_bottom = 50

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer/Quit"]
offset_left = 200.0
offset_right = 624.0
offset_bottom = 55.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
theme_override_fonts/font = ExtResource( 1 )
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Start/StartButton" to="." method="_start_game"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Credits/CreditsButton" to="." method="_go_to_credits"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Quit/QuitButton" to="." method="_quit_game"]
